--- a/startfrom.ui
+++ b/startfrom.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-image: url(:/image/back.jpg);</string>
+  </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
@@ -42,10 +45,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>20</y>
-     <width>381</width>
-     <height>71</height>
+     <x>250</x>
+     <y>10</y>
+     <width>291</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="font">
@@ -55,7 +58,7 @@
     </font>
    </property>
    <property name="text">
-    <string>塔防小游戏</string>
+    <string>塔防游戏</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
